# textrenderer

./: CMakeLists.txt  README.md
graphics/opengl/shader/: fragment.glsl  vertex.glsl
include/: Error.hpp  Number.hpp  Resource.hpp  Result.hpp  Type.hpp
include/ignore_warning/: Wdeprecated-volatile.h  Wdocumentation-deprecated-sync.h  Wdocumentation.h  pop.h  push.h
sample/macos-opengl/macos-opengl/: main.cpp
sample/macos-opengl/macos-opengl.xcodeproj/: project.pbxproj
sample/macos-opengl/macos-opengl.xcodeproj/project.xcworkspace/xcuserdata/hunhoekim.xcuserdatad/: UserInterfaceState.xcuserstate
sample/macos-opengl/macos-opengl.xcodeproj/xcuserdata/hunhoekim.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
sample/macos-opengl/macos-opengl.xcodeproj/xcuserdata/hunhoekim.xcuserdatad/xcschemes/: xcschememanagement.plist
sample/macos/macos/: main.cpp
sample/macos/macos.xcodeproj/: project.pbxproj
sample/macos/macos.xcodeproj/project.xcworkspace/xcuserdata/hunhoekim.xcuserdatad/: UserInterfaceState.xcuserstate
shader/: fregment.glsl  vertex.glsl
source/: App.h  Shader.cpp  Shader.h  Test.cpp  Unique.hpp  main.cpp
src/: App.cpp  App.h  Error.cpp  Error.h  Result.h  Result.hpp  Shader.cpp  Shader.h  Unique.hpp  main.cpp
